--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "deploy": "node deploy.mjs"
   },
   "dependencies": {
+    "@remotion/bundler": "^4.0.0",
     "@remotion/cli": "^4.0.0",
     "@remotion/google-fonts": "^4.0.0",
-    "@remotion/bundler": "^4.0.0",
     "@remotion/lambda": "^4.0.0",
     "@remotion/paths": "^4.0.0",
     "@remotion/player": "^4.0.0",
@@ -26,16 +26,17 @@
     "zod": "3.22.3"
   },
   "devDependencies": {
-    "dotenv": "16.0.3",
     "@remotion/eslint-config": "^4.0.0",
     "@remotion/eslint-plugin": "^4.0.0",
     "@types/node": "20.12.14",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@types/web": "0.0.166",
+    "dotenv": "16.0.3",
     "eslint": "8.56.0",
     "eslint-config-next": "15.0.4",
-    "typescript": "5.5.4",
-    "prettier": "3.3.3"
-  }
+    "prettier": "3.3.3",
+    "typescript": "5.5.4"
+  },
+  "packageManager": "yarn@4.5.3"
 }
