--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "deploy": "node deploy.mjs"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@remotion/bundler": "^4.0.0",
     "@remotion/cli": "^4.0.0",
     "@remotion/google-fonts": "^4.0.0",
@@ -19,6 +22,7 @@
     "@remotion/paths": "^4.0.0",
     "@remotion/player": "^4.0.0",
     "@remotion/shapes": "^4.0.0",
+    "framer-motion": "^11.2.12",
     "next": "15.0.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
